--- a/_posts/2021-11-17-VimTips.md
+++ b/_posts/2021-11-17-VimTips.md
@@ -87,8 +87,8 @@ Command | shortcut
  --- | ---
 Next buffer | :bnext or :bn
 Previous buffer | :bprev or :bp
-Switch by number | :b<nr>
-Switch by name | :b <part of name>
+Switch by number | :b nr
+Switch by name | :b part of name
 Buffers' list | :buffers
 Jump backward | Ctrl-o
 Jump forward | Ctrl-i
